--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Pakistan TV",
+    "name": "Pakistan Live TV",
     "short_name": "Pakistan Live TV",
     "start_url": ".",
     "display": "standalone",
