--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "Pakistan Live TV",
-    "short_name": "Pakistan Live TV",
-    "start_url": "https://pakistanlive.tv",
+    "short_name": "Live TV",
+    "start_url": ".",
     "display": "standalone",
-    "background_color": "#000",
-    "theme_color": "#000",
+    "background_color": "#000000",
+    "theme_color": "#000000",
     "description": "Pakistan Live TV",
     "orientation": "portrait-primary",
     "prefer_related_applications": true,
@@ -18,6 +18,18 @@
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "icons/Icon-maskable-192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "icons/Icon-maskable-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
